--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "chai": "^4.1.2",
     "jest-expo": "26.0.0",
+    "mocha": "^5.1.1",
     "react-native-debugger-open": "^0.3.17",
     "react-native-scripts": "1.13.2",
     "react-test-renderer": "16.3.0-alpha.1"
@@ -21,6 +23,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "expo": "^26.0.0",
     "express": "^4.16.3",
     "knex": "^0.14.6",
