--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "jest-expo": "26.0.0",
     "mocha": "^5.1.1",
     "react-native-debugger-open": "^0.3.17",
