--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "pg": "^7.4.1",
     "react": "^16.3.0",
     "react-native": "~0.54.1",
+    "react-native-elements": "^0.19.1",
+    "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
