--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo": "^26.0.0",
     "express": "^4.16.3",
     "knex": "^0.14.6",
+    "moment": "^2.22.1",
     "pg": "^7.4.1",
     "react": "^16.3.0",
     "react-native": "~0.54.1",
