--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^16.3.0",
     "react-native": "~0.54.1",
     "react-native-elements": "^0.19.1",
+    "react-native-maps": "^0.21.0",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
     "redux-logger": "^3.0.6",
