--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.0.0",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "expo": "^26.0.0",
     "express": "^4.16.3",
