--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@mapbox/polyline": "^1.0.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "expo": "^26.0.0",
     "express": "^4.16.3",
+    "express-http-proxy": "^1.2.0",
     "knex": "^0.14.6",
     "moment": "^2.22.1",
+    "node-fetch": "^2.1.2",
     "pg": "^7.4.1",
     "react": "^16.3.0",
     "react-native": "~0.54.1",
