--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-maps": "^0.21.0",
+    "react-native-moment-countdown": "0.0.2",
     "react-navigation": "^1.5.12",
     "react-redux": "^5.0.7",
     "redux-logger": "^3.0.6",
