--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "mocha --exit",
+    "test": "NODE_ENV=test mocha --exit",
     "postinstall": "rndebugger-open"
   },
   "jest": {
