--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-navigation": "^1.5.12",
     "react-redux": "^5.0.7",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "voucher-code-generator": "^1.1.1"
   }
 }
