--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
     "react": "^16.3.0",
     "react-native": "~0.54.1",
     "react-native-awesome-alerts": "^1.0.7",
+    "react-native-communications": "^2.2.1",
     "react-native-countdown-component": "^1.6.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-maps": "^0.21.0",
     "react-native-moment-countdown": "0.0.2",
+    "react-native-textinput-effects": "^0.4.2",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.12",
     "react-redux": "^5.0.7",
     "redux-logger": "^3.0.6",
