Add styling to team management page

--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "react-native-awesome-alerts": "^1.0.7",
     "react-native-communications": "^2.2.1",
     "react-native-countdown-component": "^1.6.1",
-    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-maps": "^0.21.0",
+    "react-native-modal-datetime-picker": "^5.1.0",
     "react-native-moment-countdown": "0.0.2",
     "react-native-textinput-effects": "^0.4.2",
     "react-native-vector-icons": "^4.6.0",
